--- a/app/src/main/res/layout/activity_adicionar_medicamento.xml
+++ b/app/src/main/res/layout/activity_adicionar_medicamento.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="cdpaulus.medcontrol.AdicionarMedicamento">
+
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        tools:context="cdpaulus.medcontrol.AdicionarMedicamento">
+
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="280dp"
+        android:text="Ler"
+        android:textColor="#e91e63"
+        android:textSize="23sp"
         android:layout_gravity="center"
-        android:layout_marginTop="250dp"
-        android:text="Leitor"
-        android:textSize="16px"
-        android:id="@+id/btn_scan"/>
+        android:layout_width="340dp"
+        android:layout_height="60dp"
+        android:id="@+id/btn_scan"
+        android:background="@drawable/buttonshape"/>
+
 
     <TextView
         android:layout_width="match_parent"
