--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
 
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical">
 
@@ -18,7 +18,7 @@
         android:layout_marginTop="20dp"
         android:text="Adicionar Medicamento"
         android:textColor="#e91e63"
-        android:textSize="23dp"
+        android:textSize="23sp"
         android:layout_gravity="center"
         android:layout_width="340dp"
         android:layout_height="60dp"
@@ -30,7 +30,7 @@
         android:layout_marginTop="20dp"
         android:text="Listar medicamentos"
         android:textColor="#e91e63"
-        android:textSize="23dp"
+        android:textSize="23sp"
         android:layout_gravity="center"
         android:layout_width="340dp"
         android:layout_height="60dp"
