--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#00bcd4</color>
     <color name="colorPrimaryDark">#00bcd4</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="fundo">#FFF</color>
 </resources>
