--- a/app/src/main/res/layout/activity_listar.xml
+++ b/app/src/main/res/layout/activity_listar.xml
@@ -6,7 +6,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-   >
+    android:background="@color/fundo"
+
+    >
 
 
     <ListView
